<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/no_internet" />

        <TextView
            android:id="@+id/txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/no_internet_connection" />

        <Button
            android:id="@+id/retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/disable_bg"
            android:gravity="center"
            android:text="@string/retry" />

    </LinearLayout>
</androidx.cardview.widget.CardView>